working framework for website, html structure for home page, and mvp of image scroller and menu-bar

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html>
- <head>
-  <meta charset="UTF-8">
-  <title>title</title>
- </head>
-    <h1>UC Berkeley Thai Student Association</h1>
-    <p>Currently Under Construction! Come back later!</p>
- <body>
-  
- </body>
+<html lang="en">
+<head>
+  	<meta charset="UTF-8">
+  	<link rel="stylesheet" type="text/css" href="css/reset.css">
+  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+	<link rel="stylesheet" href="css/flexslider.css" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+  	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+  	<title>Thailand Student Association</title>
+</head>
+<body>
+<div class="container">
+	<div class="row">
+
+	 	<div class="menu-bar span5">
+		    <ul>
+		        <li class="selected"><a href="#">home</a></li><li>
+		        <a href="/schedule">about</a></li><li>
+		        <a href="/events">events</a></li><li>
+		        <a href="/officers">officers</a></li><li>
+		       	<a href="/friends">contact</a></li>
+		    </ul>
+	 	</div>
+	 	<div class="span7">
+	 	</div>
+	</div>
+</div>
+<div class="container">
+	<div class="flexslider">
+	  <ul class="slides">
+	    <li><div class="flex-image image1"></div></li>
+	    <li><div class="flex-image image2"></div></li>
+	    <!-- <li><div class="flex-image image3"></div></li> -->
+	  </ul>
+	</div>
+</div>
+
+</body>
 </html>
