--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	 	<div class="menu-bar span5">
 		    <ul>
 		        <li class="selected"><a href="#">home</a></li><li>
-		        <a href="/schedule">about</a></li><li>
+		        <a href="/about">about</a></li><li>
 		        <a href="/events">events</a></li><li>
 		        <a href="/officers">officers</a></li><li>
 		       	<a href="/friends">contact</a></li>
