--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
   	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  	<!-- forces mobile viewport to be correct -->
+
   	<link rel="stylesheet" type="text/css" href="css/reset.css">
   	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="css/flexslider.css" type="text/css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
+
 	<script type="text/javascript" src="js/index.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
   	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
-  	<title>Thailand Student Association</title>
+  	<title>U.C. Berkeley Thailand Student Association</title>
 </head>
 <body>
 <div class="container">
@@ -30,7 +34,7 @@
 	 	</div>
 	</div>
 </div>
-<div class="container">
+<div class="flexslider-container">
 	<div class="flexslider">
 	  <ul class="slides">
 	    <li><div class="flex-image image1"></div></li>
