added about.html file, not sure whats wrong with Ruby Rack

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
 	 	<div class="menu-bar span5">
 		    <ul>
 		        <li class="selected"><a href="#">home</a></li><li>
-		        <a href="/about">about</a></li><li>
+		        <a href="/about.html">about</a></li><li>
 		        <a href="/events">events</a></li><li>
 		        <a href="/officers">officers</a></li><li>
-		       	<a href="/friends">contact</a></li>
+		       	<a href="/contact">contact</a></li>
 		    </ul>
 	 	</div>
 	 	<div class="span7">
