completed content for first version of home page, need to refactor LESS files, MVP of home page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
 <body>
 <div class="container">
 	<div class="row">
-
 	 	<div class="menu-bar span5">
 		    <ul>
 		        <li class="selected"><a href="#">home</a></li><li>
@@ -30,17 +29,70 @@
 		       	<a href="/contact">contact</a></li>
 		    </ul>
 	 	</div>
-	 	<div class="span7">
-	 	</div>
 	</div>
 </div>
-<div class="flexslider-container">
+
+<div class="welcome-container row-fluid">
 	<div class="flexslider">
 	  <ul class="slides">
-	    <li><div class="flex-image image1"></div></li>
+	    <li>
+	    	<div class="flex-image image1"></div>
+	    </li>
 	    <li><div class="flex-image image2"></div></li>
-	    <!-- <li><div class="flex-image image3"></div></li> -->
 	  </ul>
+	</div>
+	<div class="caption-container">
+		<div class="caption container">
+			<div class="caption-header">Welcome to the ThaiSA @ Berkeley</div>
+			<div class="caption-text-content">
+				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="event-container">
+	<div class="row">
+		<div class="event-photo span8"></div>
+		<div class="span4 events-message">
+			<div class="header">Upcoming Events</div>
+			<div class="text-content">
+				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="event-container">
+	<div class="row">
+		<div class="span5 offset1 events-message">
+			<div class="header">Come Find Us!</div>
+			<div class="text-content">
+				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+			</div>
+		</div>
+		<div class="span6 events-message">
+			<div class="header">Latest News</div>
+			<div class="text-content">
+				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="footer">
+	<div class="row">
+		<div class="span3 offset1">
+			Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.
+		</div>
+
+		<div class="span3">
+			Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.
+		</div>
+
+		<div class="span3">
+			Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.
+		</div>
 	</div>
 </div>
 
