revised layout for homepage, CSS is worse than apocolyptic"

--- a/public/about.html
+++ b/public/about.html
@@ -16,6 +16,6 @@
   	<title>U.C. Berkeley Thailand Student Association</title>
 </head>
 <body>
-	<h1>This will be the future About Page</h1>
+	<h1>HELLO GUYZZZ!</h1>
 </body>
 </html>
