--- a/public/index.html
+++ b/public/index.html
@@ -41,43 +41,68 @@
 	    <li><div class="flex-image image2"></div></li>
 	  </ul>
 	</div>
-	<div class="caption-container">
+<!-- 	<div class="caption-container">
 		<div class="caption container">
 			<div class="caption-header">Welcome to the ThaiSA @ Berkeley</div>
 			<div class="caption-text-content">
 				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 
-<div class="event-container">
-	<div class="row">
-		<div class="event-photo span8"></div>
-		<div class="span4 events-message">
-			<div class="header">Upcoming Events</div>
-			<div class="text-content">
-				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="event-container">
-	<div class="row">
-		<div class="span5 offset1 events-message">
-			<div class="header">Come Find Us!</div>
-			<div class="text-content">
-				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-			</div>
-		</div>
-		<div class="span6 events-message">
-			<div class="header">Latest News</div>
+<div class="container">
+	<div class="welcome-container2 row">
+		<div class="span10 offset1 events-message">
+			<div class="header">Welcome to Berkeley ThaiSA</div>
 			<div class="text-content">
 				Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 			</div>
 		</div>
 	</div>
+
+	<div class="event-container">
+		<div class="row">
+			<div class="event-photo span8"></div>
+			<div class="span4 events-message">
+				<div class="header">Upcoming Events</div>
+				<div class="text-content">
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo. Have a toggle here to click to next event.
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="welcome-container1">
+		<div class="row">
+			<div class="span6 events-message">
+				<div class="header">In the News</div>
+				<div class="text-content">
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
+				</div>
+			</div>
+			<div class="span6 events-message">
+				<div class="header">Apply to be an Officer</div>
+				<div class="text-content">
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="event-container">
+		<div class="row">
+
+			<div class="span3 events-message">
+				<div class="header">Idk what this is</div>
+				<div class="text-content">
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
+				</div>
+			</div>
+			<div class="event-photo span9"></div>
+		</div>
+	</div>
+
 </div>
 
 <div class="footer">
