added events page with dummy text and pictures, animated on hover, need to refactor less and javascript animations (abstract to external file?)

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
 		    <ul>
 		        <li class="selected"><a href="#">home</a></li><li>
 		        <a href="/about.html">about</a></li><li>
-		        <a href="/events">events</a></li><li>
-		        <a href="/officers">officers</a></li><li>
-		       	<a href="/contact">contact</a></li>
+		        <a href="/events.html">events</a></li><li>
+		        <a href="/officers.html">officers</a></li><li>
+		       	<a href="/contact.html">contact</a></li>
 		    </ul>
 	 	</div>
 	</div>
