--- a/public/events.html
+++ b/public/events.html
@@ -12,33 +12,59 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.2.0/grids-min.css">
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="js/events.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/events.css">
   	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
-  	<title>U.C. Berkeley Thailand Student Association</title>
+  	<title>U.C. Berkeley ThaiSA Events</title>
 </head>
 <body>
+<!-- TODO (Yuxin): Abstract menu to base template -->
 <div class="container">
 	<div class="row">
 	 	<div class="menu-bar span5">
 		    <ul>
 		        <li class="selected"><a href="#">home</a></li><li>
 		        <a href="/about.html">about</a></li><li>
-		        <a href="/events">events</a></li><li>
-		        <a href="/officers">officers</a></li><li>
-		       	<a href="/contact">contact</a></li>
+		        <a href="/events.html">events</a></li><li>
+		        <a href="/officers.html">officers</a></li><li>
+		       	<a href="/contact.html">contact</a></li>
 		    </ul>
 	 	</div>
 	</div>
 </div>
-<div>
-	<div class="event-row pure-g-r">
-	    <div class="pure-u-1-4 event-box one"> ... </div>
-	    <div class="pure-u-1-4 event-box two"> ... </div>
-	    <div class="pure-u-1-4 event-box three"> ... </div>
-	    <div class="pure-u-1-4 event-box four"> ... </div>
 
+<!-- TODO (Yuxin): Abstract all of this to Javascript/Jinja templating -->
+<div>
+	<div class="event-row-title">Fall 2013</div>
+	<div class="event-row pure-g-r">
+	    <div class="pure-u-1-3 event one">
+<!-- 	    	<div class="event-text-container">
+	    		<div class="event-title">New Semester Meeting</div>
+	    	</div> -->
+	    	<div class="event-title">2011 Stanford vs. Cal</div>
+	    	<div class="event-text-container">
+	    		<div class="event-subtitle">
+	    			<div class="event-location">155 Dwinelle</div>
+	    			<div class="event-date">7-8 PM August 24th</div>
+	    			<div class="event-photos"><a href="facebook.com">photos</a></div>
+	    			<div class="event-info"><a href="facebook.com">info</a></div>
+	    		</div>
+	    	</div>
+	    </div>
+	    <div class="pure-u-2-3 event two">
+	    	<div class="event-title">2011 Stanford vs. Cal</div>
+	    	<div class="event-text-container">
+	    		<div class="event-subtitle">
+	    			<div class="event-location">155 Dwinelle</div>
+	    			<div class="event-date">7-8 PM August 24th</div>
+	    			<div class="event-photos"><a href="facebook.com">photos</a></div>
+	    			<div class="event-info"><a href="facebook.com">info</a></div>
+	    		</div>
+	    	</div>
+	    </div>
+	    <!-- <div class="pure-u-1-3 event three"></div> -->
 	</div>
 </div>
 
