added jQuery animation for events and filled with dummy content, added toggling arrow, and event header picture, with dummy event pictures

--- a/public/events.html
+++ b/public/events.html
@@ -16,6 +16,7 @@
 
 	<script type="text/javascript" src="js/events.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/events.css">
+	<link rel="stylesheet" type='text/css' href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css"/>
   	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
   	<title>U.C. Berkeley ThaiSA Events</title>
 </head>
@@ -25,8 +26,8 @@
 	<div class="row">
 	 	<div class="menu-bar span5">
 		    <ul>
-		        <li class="selected"><a href="#">home</a></li><li>
-		        <a href="/about.html">about</a></li><li>
+		        <li><a href="/index.html">home</a></li><li>
+		        <a href="/about.html">about</a></li><li class="selected">
 		        <a href="/events.html">events</a></li><li>
 		        <a href="/officers.html">officers</a></li><li>
 		       	<a href="/contact.html">contact</a></li>
@@ -35,36 +36,40 @@
 	</div>
 </div>
 
+<div class="header-event row-fluid">
+	<div class="header-event-text-container">
+		<div class="title"></div>
+		<!-- <div class= -->
+	</div>
+</div>
+
 <!-- TODO (Yuxin): Abstract all of this to Javascript/Jinja templating -->
 <div>
-	<div class="event-row-title">Fall 2013</div>
 	<div class="event-row pure-g-r">
 	    <div class="pure-u-1-3 event one">
-<!-- 	    	<div class="event-text-container">
-	    		<div class="event-title">New Semester Meeting</div>
-	    	</div> -->
-	    	<div class="event-title">2011 Stanford vs. Cal</div>
 	    	<div class="event-text-container">
+	    		<div class="event-title"><i class="title-arrow icon-caret-up"></i>2013 ThaiSA Banquet</div>
 	    		<div class="event-subtitle">
-	    			<div class="event-location">155 Dwinelle</div>
-	    			<div class="event-date">7-8 PM August 24th</div>
-	    			<div class="event-photos"><a href="facebook.com">photos</a></div>
-	    			<div class="event-info"><a href="facebook.com">info</a></div>
+	    			<div class="event-subtitle-content">
+		    			<div class="location"><i class="blocks icon-compass"></i><div class="blocks subtitle-text">155 Dwinelle Hall, UC Berkeley</div></div>
+		    			<div class="time"><i class="blocks icon-calendar-empty"></i><div class="blocks subtitle-text">August 24th, 2013 7-8:30PM</div></div>
+		    			<div class="links-container"><div class="blocks links"><a href="facebook.com">photos</a></div><div class="blocks links"><a href="facebook.com">info</a></div></div>
+		    		</div>
 	    		</div>
 	    	</div>
 	    </div>
 	    <div class="pure-u-2-3 event two">
-	    	<div class="event-title">2011 Stanford vs. Cal</div>
 	    	<div class="event-text-container">
+	    		<div class="event-title"><i class="title-arrow icon-caret-up"></i>2012 Welcome Week Tabling</div>
 	    		<div class="event-subtitle">
-	    			<div class="event-location">155 Dwinelle</div>
-	    			<div class="event-date">7-8 PM August 24th</div>
-	    			<div class="event-photos"><a href="facebook.com">photos</a></div>
-	    			<div class="event-info"><a href="facebook.com">info</a></div>
+	    			<div class="event-subtitle-content">
+		    			<div class="location"><i class="blocks icon-compass"></i><div class="blocks subtitle-text">Sproul Plaza, UC Berkeley</div></div>
+		    			<div class="time"><i class="blocks icon-calendar-empty"></i><div class="blocks subtitle-text">August 24th, 2013 7-8:30PM</div></div>
+		    			<div class="links-container"><div class="blocks links"><a href="facebook.com">photos</a></div><div class="blocks links"><a href="facebook.com">info</a></div></div>
+		    		</div>
 	    		</div>
 	    	</div>
 	    </div>
-	    <!-- <div class="pure-u-1-3 event three"></div> -->
 	</div>
 </div>
 
