first version, no mentorship page yet

--- a/public/mentorship.html
+++ b/public/mentorship.html
@@ -25,10 +25,10 @@
         <div class="menu-bar span8">
             <ul>
                 <!-- Must be the following format to be spaceless -->
-                <li class="selected"><a href="/index.html">home</a></li><li>
+                <li><a href="/index.html">home</a></li><li>
                 <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li>
-                <a href="/officers.html">people</a></li><li >
+                <a href="/officers.html">people</a></li><li class="selected">
                 <a href="/mentorship.html">mentorship</a></li><li>
                 <a href="/contact.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
@@ -37,46 +37,11 @@
     </div>
 </div>
 
+<div class="background-header-container"><div class="background-header">ThaiSA Mentorship</div></div>
+<div class="header-container">ThaiSA Mentorship</div>
+
 <div class="container">
-    <div class="cover-photo-container row">
-        <div class="span12">
-            <div class="flexslider">
-              <ul class="slides">
-                <li><div class="flex-image image1"></div></li>
-                <li><div class="flex-image image2"></div></li>
-              </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="events-banner-container row">
-        <div class="span12 events-banner">
-            <p class="banner">Come visit ThaiSA at the Welcome Week Banquet this weekend (August 31st, 2013) @ 155 Dwinelle Hall 7PM</p>
-            <p class="banner" style="display: none;">Bepp Bepp Bpehhh</p>
-        </div>
-    </div>
-
-    <div class="welcome-container row">
-        <div class="span10 offset1 events-message">
-            <div class="header">Welcome the Berkeley Thai Student Association</div>
-            <div class="text-content">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            </div>
-        </div>
-    </div>
-
-    <div class="news-header-container row"><div class="span10 offset1 news-header header">In the News</div></div>
-    <div class="news-container row">
-        <div class="span5 offset1 news-message">
-            <div class="text-content">
-                <span class="news-date">July 25th 2013</span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
-            </div>
-        </div>
-        <div class="span5 news-message">
-            <div class="text-content">
-                <span class="news-date">July 25th 2013</span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
-            </div>
-        </div>
+    <div class="mentorship-content">
     </div>
 </div>
 
