--- a/officers.html
+++ b/officers.html
@@ -10,36 +10,39 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link href="css/assets/bootstrap.css" rel="stylesheet">
     <link href="css/assets/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/officers.css">
 
     <!-- js -->
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/content/people.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/officers.js"></script>
 </head>
 
+<!-- Main Menu -->
 <div class="container">
     <div class="row">
-        <div class="menu-bar span6">
+        <div class="menu-bar span8">
             <ul>
-                <li><a href="#">home</a></li><li>
+                <!-- Must be the following format to be spaceless -->
+                <li><a href="/index.html">home</a></li><li>
                 <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li class="selected">
-                <a href="/officers.html">officers</a></li><li>
+                <a href="/officers.html">officers</a></li><li >
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/contact.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
     </div>
 </div>
 
-<div class="background-header-container"><div class="background-header">People</div></div>
+<div class="background-header-container"><div class="background-header">Officers</div></div>
 
 <!-- Header with Year Menu -->
 <div class="container header-container">
     <div class="row header-content">
-        <div class="span5 header-text-container"><div class="header-text">People</div></div>
+        <div class="span5 header-text-container"><div class="header-text">Officers</div></div>
         <div class="span7 year-menu-container">
             <!-- For past officers, set attr id as year -->
             <div class="year-menu">
@@ -169,19 +172,18 @@
             </div>
         </div>
     </div>
-
 </div>
 
+<!-- Footer -->
 <div class="footer-container">
-    <div class="container-fluid">
-        <div class="row-fluid footer-content">
+    <div class="container">
+        <div class="row footer-content">
 
-            <div class="span3 offset2 footer-column">
+            <div class="span2 offset1 footer-column">
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
                         <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="http://www.twitter.com/zhuyxn"><div class='icons twitter'></div></a></li>
                         <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
@@ -206,7 +208,7 @@
                 </div>
             </div>
 
-            <div class="span2 footer-column">
+            <div class="span4 footer-column">
                 <div class="list-header">SITE MAP</div>
                 <div class="sitemap-container">
                     <ul>
@@ -215,16 +217,18 @@
                         <li class="footer-link"><a href="/about.html">events</a></li>
                         <li class="footer-link"><a href="/about.html">officers</a></li>
                         <li class="footer-link"><a href="/about.html">mentorship</a></li>
+                        <li class="footer-link"><a href="/about.html">thai classes</a></li>
+                        <li class="footer-link"><a href="/about.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
