--- a/about.html
+++ b/about.html
@@ -8,21 +8,26 @@
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link href="css/assets/bootstrap.css" rel="stylesheet">
-    <link href="css/assets/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
+
+    <!-- js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 </head>
 
+<!-- Main Menu -->
 <div class="container">
     <div class="row">
-        <div class="menu-bar span6">
+        <div class="menu-bar span8">
             <ul>
+                <!-- Must be the following format to be spaceless -->
                 <li><a href="/index.html">home</a></li><li class="selected">
                 <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li>
-                <a href="/officers.html">officers</a></li><li>
-                <a href="/contact.html">mentors</a></li><li>
+                <a href="/officers.html">people</a></li><li >
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/contact.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
