--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ThaiSA Contact Form</title>
+    <title>ThaiSA Contact</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- forces mobile viewport to be correct -->
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link href="css/assets/bootstrap.css" rel="stylesheet">
-    <link href="css/assets/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
 
-    <!-- js -->
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/content/people.js"></script>
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/contact.js"></script>
 </head>
 
+<!-- Main Menu -->
 <div class="container">
     <div class="row">
         <div class="menu-bar span8">
             <ul>
+                <!-- Must be the following format to be spaceless -->
                 <li><a href="/index.html">home</a></li><li>
                 <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li>
-                <a href="/officers.html">officers</a></li><li>
-                <a href="/contact.html">mentorship</a></li><li class="selected">
-                <a href="/contact.html">thai classes</a></li><li>
+                <a href="/officers.html">people</a></li><li >
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/dept.html">thai classes</a></li><li class="selected">
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
