--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
     <link rel="stylesheet" href="css/flexslider.css" type="text/css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
 
@@ -37,13 +37,14 @@
     </div>
 </div>
 
+<!--  -->
 <div class="container">
     <div class="cover-photo-container row">
         <div class="span12">
             <div class="flexslider">
               <ul class="slides">
-                <li><div class="flex-image image1"></div></li>
-                <li><div class="flex-image image2"></div></li>
+                <li><div style="background-image: url('https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-prn1/1026141_10151740590010011_2756438_o.jpg');" class="flex-image image1"></div></li>
+                <li><div style="background-image: url('https://sphotos-a-pao.xx.fbcdn.net/hphotos-ash3/381969_10150492689866810_1863112582_n.jpg');" class="flex-image image2"></div></li>
               </ul>
             </div>
         </div>
