--- a/events.html
+++ b/events.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>ThaiSA Events</title>
     <meta charset="UTF-8">
     <!-- forces mobile viewport to be correct -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link href="css/assets/bootstrap.css" rel="stylesheet">
-    <link href="css/assets/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link href="css/pure.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
@@ -18,21 +18,21 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
     <script type="text/javascript" src="js/events.js"></script>
-
-    <title>ThaiSA Events</title>
 </head>
 <body>
 
-<!-- Navigation Menu -->
+<!-- Main Menu -->
 <div class="container">
     <div class="row">
-        <div class="menu-bar span12">
+        <div class="menu-bar span8">
             <ul>
+                <!-- Must be the following format to be spaceless -->
                 <li><a href="/index.html">home</a></li><li>
-                <a href="/about.html">about</a></li><li class="selected">
+                <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li>
-                <a href="/officers.html">officers</a></li><li>
-                <a href="/contact.html">mentors</a></li><li>
+                <a href="/officers.html">people</a></li><li >
+                <a href="/mentorship.html">mentorship</a></li><li>
+                <a href="/dept.html">thai classes</a></li><li class="selected">
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
 <div class="container featured-container">
     <div class="row featured-row">
         <div class="span4 featured-picture-container">
-            <div class="featured-picture"></div>
+            <div style="background-image: url('images/event1.jpg');" class="featured-picture"></div>
         </div> <!-- featured-picture-container -->
 
         <div class="container span8 featured-content-container">
