--- a/events.html
+++ b/events.html
@@ -28,11 +28,11 @@
             <ul>
                 <!-- Must be the following format to be spaceless -->
                 <li><a href="/index.html">home</a></li><li>
-                <a href="/about.html">about</a></li><li>
+                <a href="/about.html">about</a></li><li class="selected">
                 <a href="/events.html">events</a></li><li>
                 <a href="/officers.html">people</a></li><li >
                 <a href="/mentorship.html">mentorship</a></li><li>
-                <a href="/dept.html">thai classes</a></li><li class="selected">
+                <a href="/dept.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
