--- a/officers.html
+++ b/officers.html
@@ -8,16 +8,18 @@
 
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link href="css/assets/bootstrap.css" rel="stylesheet">
-    <link href="css/assets/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link href="css/pure.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/officers.css">
 
     <!-- js -->
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
     <script type="text/javascript" src="js/officers.js"></script>
 </head>
+<body>
 
 <!-- Main Menu -->
 <div class="container">
@@ -28,9 +30,9 @@
                 <li><a href="/index.html">home</a></li><li>
                 <a href="/about.html">about</a></li><li>
                 <a href="/events.html">events</a></li><li class="selected">
-                <a href="/officers.html">officers</a></li><li >
+                <a href="/officers.html">people</a></li><li>
                 <a href="/mentorship.html">mentorship</a></li><li>
-                <a href="/contact.html">thai classes</a></li><li>
+                <a href="/dept.html">thai classes</a></li><li>
                 <a href="/contact.html">contact</a></li>
             </ul>
         </div>
