about page cover picture

--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@
 <div class="background-header-container"><div class="background-header">About Us</div></div>
 
 <div class="container">
+    <div class="row about-photo-container">
+        <div style="background-image: url('https://sphotos-a-pao.xx.fbcdn.net/hphotos-ash3/381969_10150492689866810_1863112582_n.jpg');" class="span12 about-photo"></div>
+    </div>
     <div class="row about-header-container">
         <div class="span6 about-header">About Us</div>
     </div>
