--- a/contact.html
+++ b/contact.html
@@ -73,15 +73,14 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
 </div>
 
 <div class="footer-container">
-    <div class="container-fluid">
-        <div class="row-fluid footer-content">
+    <div class="container">
+        <div class="row footer-content">
 
-            <div class="span3 offset2 footer-column">
+            <div class="span2 offset1 footer-column">
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
                         <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="http://www.twitter.com/zhuyxn"><div class='icons twitter'></div></a></li>
                         <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
@@ -106,7 +105,7 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
                 </div>
             </div>
 
-            <div class="span2 footer-column">
+            <div class="span4 footer-column">
                 <div class="list-header">SITE MAP</div>
                 <div class="sitemap-container">
                     <ul>
@@ -115,13 +114,14 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
                         <li class="footer-link"><a href="/about.html">events</a></li>
                         <li class="footer-link"><a href="/about.html">officers</a></li>
                         <li class="footer-link"><a href="/about.html">mentorship</a></li>
+                        <li class="footer-link"><a href="/about.html">thai classes</a></li>
+                        <li class="footer-link"><a href="/about.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
         </div>
     </div>
 </div>
