--- a/about.html
+++ b/about.html
@@ -66,19 +66,17 @@
             <div class="text-content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</div>
         </div>
     </div>
-
-
 </div>
-<div class="footer-container">
-    <div class="container-fluid">
-        <div class="row-fluid footer-content">
 
-            <div class="span3 offset2 footer-column">
+<div class="footer-container">
+    <div class="container">
+        <div class="row footer-content">
+
+            <div class="span2 offset1 footer-column">
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
                         <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="http://www.twitter.com/zhuyxn"><div class='icons twitter'></div></a></li>
                         <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
@@ -103,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="span3 footer-column">
+            <div class="span4 footer-column">
                 <div class="list-header">SITE MAP</div>
                 <div class="sitemap-container">
                     <ul>
@@ -112,16 +110,18 @@
                         <li class="footer-link"><a href="/about.html">events</a></li>
                         <li class="footer-link"><a href="/about.html">officers</a></li>
                         <li class="footer-link"><a href="/about.html">mentorship</a></li>
+                        <li class="footer-link"><a href="/about.html">thai classes</a></li>
+                        <li class="footer-link"><a href="/about.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
-            <div class="span12 footer-bottom">Designed by Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
