thaisa membership to membership

--- a/mentorship.html
+++ b/mentorship.html
@@ -38,7 +38,7 @@
 
 <div class="container">
     <div class="row header-container">
-        <div class="span6 offset1 mentorship-header">ThaiSA Mentorship</div>
+        <div class="span6 offset1 mentorship-header">Mentorship</div>
     </div>
     <div class="row">
         <div class="span10 offset1 mentorship-text">The Peer Mentorship Program is an initiative that began in the 2013-2014 school year. This program, reminiscent of Thailand’s famous and longstanding Sai Rahud (สายรหัส) program, serves the purpose of trying to ease the transition into USA, Berkeley and college life for new Thai students by matching incoming Thai UC Berkeley students (Mentees) with current Thai UC Berkeley students (Mentors). Mentors and mentees apply to this program voluntarily and are matched based on different factors, including but not limited to their academic interests and extracurricular interests. Each mentor is usually assigned to one mentee as we try to maintain the 1:1 mentor-mentee ratio in our program. Mentors are required to hold regular events for their mentees that will help the mentees acclimatize themselves to life in USA and Berkeley. Group events that bring together all the mentors and mentees for bonding activities are also regularly held. The program hopes that mentors and mentees will continue to foster lifelong friendships well beyond the program and that the program is a rewarding experience for both the mentors and mentees.</div>
