--- a/mentorship.html
+++ b/mentorship.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="css/text.css">
 </head>
 
+<div id="wrap">
+<div id="main">
 <!-- Main Menu -->
 <div class="container">
     <div class="row">
@@ -45,6 +47,9 @@
 
         <div class="span10 offset1 contact-text"><i class="icon-envelope"></i>Email <span class="bold">Numfah Vanitchanant</span> at <a href="mailto:numfah_23berkeley.edu">numfah_23@berkeley.edu</a> for more information.</div>
     </div>
+</div>
+
+</div>
 </div>
 
 <div class="footer-container">
