--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@
 </head>
 
 <!-- Main Menu -->
+<div id="wrap">
+<div id="main">
 <div class="container">
     <div class="row">
         <div class="menu-bar span8">
@@ -71,7 +73,8 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
     <input type="submit" name="submit" value="Submit" id="ss-submit"></td>
     </tr></tbody></table></div></ol></form>
 </div>
-
+</div>
+</div>
 <div class="footer-container">
     <div class="container">
         <div class="row footer-content">
@@ -121,7 +124,7 @@ onsubmit="submitted=true;"><ol style="padding-left: 0">
             </div>
         </div>
         <div class="row-fluid footer-bottom-container">
-            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA) ** Designed By Yuxin Zhu</div>
+            <div class="span12 footer-bottom">&copy; 2013 U.C. Berkeley Thailand Student Association (ThaiSA)</div>
         </div>
     </div>
 </div>
