--- a/dept.html
+++ b/dept.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="css/text.css">
 </head>
 
+<div id="wrap">
+<div id="main">
 <!-- Main Menu -->
 <div class="container">
     <div class="row">
@@ -45,6 +47,8 @@
 
         <div class="span10 offset1 contact-text"><i class="icon-dollar"></i>Donate <span class="bold">to the Thai Language Department</span> at <a href="mailto:numfah_23berkeley.edu">www.berkeley.edu</a>.</div>
     </div>
+</div>
+</div>
 </div>
 
 <div class="footer-container">
