added fake events

--- a/events.html
+++ b/events.html
@@ -58,7 +58,7 @@
                     <div class="name">Thaisa Welcome Week Banquet</div>
                     <div class="time"><i class="icon-calendar-empty"></i>Tuesday, May 9th, 11-12PM</div>
                     <div class="location"><i class="icon-compass"></i>155 Dwinelle Hall, UC Berkeley</div>
-                    <div class="description">Thank you so much to all our members who have come out to our general TASA events and family events to show their support. Without each and every one of you, TASA would not have grown into the organization that it is today. As further thanks, we'd like to invite you for our last TASA event of the semester.</div>
+                    <div class="description">ThaThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank Blehnk Bleh</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- featured-text -->
 
@@ -67,7 +67,7 @@
                     <div class="name">Thaisa Welcome Week Banquet</div>
                     <div class="time"><i class="icon-calendar-empty"></i>Tuesday, May 9th, 11-12PM</div>
                     <div class="location"><i class="icon-compass"></i>155 Dwinelle Hall, UC Berkeley</div>
-                    <div class="description">Thank you so much to all our members who have come out to our general TASA events and family events to show their support. Without each and every one of you, TASA would not have grown into the organization that it is today. As further thanks, we'd like to invite you for our last TASA event of the semester. Join us for a day outside and we'll be playing games alongside the fresh air.</div>
+                    <div class="description">Thank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank BlehThank Bleh</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- eatured-text -->
             </div>
