reverted title of index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="welcome-container row">
         <div class="span10 offset1 events-message">
-            <div class="header">Welcome the AWESOME WEBSITE</div>
+            <div class="header">Welcome the UC Berkeley Thai Student Association</div>
             <div class="text-content">
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
             </div>
