Added news section

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <div class="news-container row">
         <div class="span5 offset1 news-message">
             <div class="text-content">
-                <span class="news-date">July 25th 2013</span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
+                <span class="news-date">July 25th 2013</span>Tons of welcome week activities coming up for Thai students! Email thaisa.ucberkeley@gmail.com for more details.
             </div>
         </div>
         <div class="span5 news-message">
             <div class="text-content">
-                <span class="news-date">July 25th 2013</span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.
+                <span class="news-date">July 25th 2013</span>This year, we are also looking to expand our joint events initiatives with other South East Asian (SEA) student organizations at UC Berkeley. Stay tuned!
             </div>
         </div>
     </div>
