Added some officer info

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
     <div class="welcome-container row">
         <div class="span10 offset1 events-message">
-            <div class="header">Welcome the UC Berkeley ThaiSA</div>
+            <div class="header">Welcome the UC Berkeley Thai Student Association (ThaiSA)</div>
             <div class="text-content">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                We are a social, professional and cultural student organization with the main aim of informing the UC Berkeley community and beyond about Thailand and its exotic culture and also uniting and assisting the many Thai students at UC Berkeley. Please browse our website for more information or contact us at thaisa.ucberkeley@gmail.com.
             </div>
         </div>
     </div>
@@ -89,8 +89,8 @@
                 <div class="list-header">SUPPORT</div>
                 <div class="social-container">
                     <ul>
-                        <li><a href="http://www.facebook.com/yzhu25"><div class='icons facebook'></div></a></li>
-                        <li><a href="mailto:yuxinzhu@berkeley.edu"><div class='icons email'></div></a></li>
+                        <li><a href="https://www.facebook.com/groups/2229957747/"><div class='icons facebook'></div></a></li>
+                        <li><a href="mailto:thaisa.ucberkeley@gmail.com"><div class='icons email'></div></a></li>
                     </ul>
                 </div>
             </div>
@@ -107,9 +107,9 @@
                 <div class="list-header">GET IN TOUCH</div>
                 <div class="contact-container">
                     <ul>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">President</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Secretary</a></li>
-                        <li class="footer-link"><a href="mailto:yuxinzhu@berkeley.edu">Webmaster</a></li>
+                        <li class="footer-link"><a href="mailto:natchapol.p@berkeley.edu">President</a></li>
+                        <li class="footer-link"><a href="mailto:numfah_23@berkeley.edu">Secretary</a></li>
+                        <li class="footer-link"><a href="mailto:k.phongpandecha@berkeley.edu">Webmaster</a></li>
                     </ul>
                 </div>
             </div>
